# ctf-utility

./: README.md  pyproject.toml
ctf_utils/: ctfutils.py
ctf_utils/templates/: crypto.html  homepage.html
